# eesi

./: .gitignore  CODEOWNERS  Dockerfile  Dockerfile.dev  INSTALL.md  LICENSE  README.md  STATUS.md  buildspec.yml  make_docker.sh
src/: CMakeLists.txt
src/eesi/: Constraint.h  main.cpp
src/llvm-passes/: CalledFunctions.cpp  CalledFunctions.h  Common.cpp  Common.h  DefinedFunctions.cpp  DefinedFunctions.h  ErrorBlocks.cpp  ErrorBlocks.h  ErrorBlocksPointer.cpp  ErrorBlocksPointer.h  Location.hpp  MissingChecks.cpp  MissingChecks.h  ReturnConstraints.cpp  ReturnConstraints.h  ReturnConstraintsPointer.cpp  ReturnConstraintsPointer.h  ReturnPropagation.cpp  ReturnPropagation.h  ReturnPropagationPointer.cpp  ReturnPropagationPointer.h  ReturnedValues.cpp  ReturnedValues.h
src/scripts/: confirmedbugs.sh  copy_bug_classes.py  intersect.py  neo4j.py  pick_inputs.py  shacompare.sh  sort_bugs.py  table1.py  tabledata.sh
src/tests/: runtests.py  test-erroronly.txt  test-specs.txt
src/tests/test1-trivial-nonec/: test.c
src/tests/test10-multigoto-diffvar/: test.c
src/tests/test10-multigoto-notzero/: test.c
src/tests/test11-multigoto-samevar/: test.c
src/tests/test12-samevar/: test.c
src/tests/test13-return/: test.c
src/tests/test14-multireturn/: test.c
src/tests/test15-cdg/: test.c
src/tests/test17-handler/: test.c
src/tests/test18-assignment-in-if/: test.c
src/tests/test19-paper-fig1/: test.c
src/tests/test2-missingcheck-return/: bugs.txt  specs.txt  test.c
src/tests/test20-errorcode-blocktospec/: test.c
src/tests/test21-dropped/: bugs.txt  test.c
src/tests/test22-checked/: test.c
src/tests/test23-missingcheck/: bugs.txt  test.c
src/tests/test24-fieldcheck/: specs.txt  test.c
src/tests/test25-return-null/: test.c
src/tests/test26-struct-arg/: bugs.txt  specs.txt  (+1 more)
(+103 files in other folders)
